# medbot

./: .gitignore  Dockerfile  README.md  app.py  main.py  pyproject.toml  store_index.py  template.sh
.github/workflows/: cicd.yaml
resource/: trials.ipynb
src/: __init__.py  helper.py  prompt.py
static/: style.css
templates/: index.html
