[project]
name = "medbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask==3.1.1",
    "ipykernel>=6.30.1",
    "langchain==0.3.26",
    "langchain-community==0.3.26",
    "langchain-groq>=0.3.7",
    "langchain-huggingface>=0.3.1",
    "langchain-pinecone==0.2.8",
    "pinecone>=7.3.0",
    "pypdf==5.6.1",
    "python-dotenv==1.1.0",
    "sentence-transformers==4.1.0",
]
